--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-aliyun-oss",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "index.js",
   "author": "paul",
   "description": "a webpack(>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
@@ -20,6 +20,7 @@
     "co": "^4.6.0",
     "colors": "^1.3.2",
     "glob": "^7.1.3",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "slash": "^3.0.0"
   }
 }
