--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "webpack-aliyun-oss",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "main": "index.js",
   "author": "paul",
   "description": "a webpack(>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
+  "scripts": {
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gp5251/webpack-aliyun-oss.git"
@@ -15,12 +18,23 @@
     "aliyun",
     "oss"
   ],
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.spec.js"
+    ]
+  },
   "dependencies": {
     "ali-oss": "^6.0.1",
     "co": "^4.6.0",
     "colors": "^1.3.2",
-    "glob": "^7.1.3",
+    "globby": "^10.0.1",
     "lodash": "^4.17.11",
     "slash": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0"
   }
 }
