--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "co": "^4.6.0",
     "colors": "^1.3.2",
     "globby": "^10.0.1",
-    "lodash": "^4.17.11",
     "slash": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-jest": "^24.9.0",
+    "fs-extra": "^8.1.0",
     "jest": "^24.9.0"
   }
 }
