--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-aliyun-oss",
+  "name": "@hetao/webpack-aliyun-oss",
   "version": "0.3.1",
   "main": "index.js",
   "author": "paul",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gp5251/webpack-aliyun-oss.git"
+    "url": "git+https://github.com/gp5251/webpack-aliyun-oss.git"
   },
   "license": "MIT",
   "homepage": "https://github.com/gp5251/webpack-aliyun-oss",
@@ -39,5 +39,8 @@
     "fs-extra": "^8.1.0",
     "jest": "^24.9.0",
     "webpack": "^4.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/gp5251/webpack-aliyun-oss/issues"
   }
 }
