--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "webpack-aliyun-oss",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "index.js",
   "author": "paul",
-  "description": "a webpack(>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
+  "description": "a webpack(version>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
   "scripts": {
     "test": "jest"
   },
