--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-aliyun-oss",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "main": "index.js",
   "author": "paul",
   "description": "a webpack(version>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
@@ -30,6 +30,7 @@
     "ali-oss": "^6.10.0",
     "colors": "^1.3.2",
     "globby": "^10.0.1",
+    "ora": "5.4.1",
     "slash": "^3.0.0"
   },
   "devDependencies": {
