--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-aliyun-oss",
-  "version": "0.3.9",
+  "version": "0.5.0",
   "main": "index.js",
   "author": "paul",
   "description": "a webpack(version>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
@@ -21,6 +21,10 @@
     "plugin",
     "assets"
   ],
+  "files": [
+    "index.js",
+    "README.md"
+  ],
   "jest": {
     "testMatch": [
       "**/__tests__/**/*.spec.js"
@@ -29,15 +33,15 @@
   "dependencies": {
     "ali-oss": "^6.10.0",
     "colors": "^1.3.2",
+    "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
-    "ora": "5.4.1",
+    "listr": "^0.14.3",
     "slash": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-jest": "^24.9.0",
-    "fs-extra": "^8.1.0",
     "jest": "^24.9.0",
     "webpack": "^4.0.0"
   }
