--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-aliyun-oss",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "main": "index.js",
   "author": "paul",
   "description": "a webpack(version>=4) plugin to upload assets to aliyun oss, can be used with or without webpack.",
@@ -35,8 +35,7 @@
     "colors": "^1.3.2",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
-    "listr": "^0.14.3",
-    "slash": "^3.0.0"
+    "listr": "^0.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
